--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ subtitle: ''
 description: ''
 keywords:
 author: John Doe
-language: en
+language: enpretty_urls
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://example.com/public
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
