--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: Ezreal的博客
+subtitle: '记录个人学习'
 description: ''
 keywords:
 author: John Doe
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com/
+url: http://ezrealok.com/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
