--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ branches:
 script:
   - hexo generate # generate static files
 deploy:
-  target: gh-pages
   provider: pages
   skip-cleanup: true
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: master
+  all_branches: true # solve a permission problem
+  target_branch: gh-page
   local-dir: public
